# routeros-telegram-bot

./: README.md  pyproject.toml
rostelegrambot/: __main__.py  config.py  utils.py
rostelegrambot/tool/: ping.py
tests/: test_rostelegrambot.py
