[tool.poetry]
name = "rostelegrambot"
version = "0.1.0"
description = ""
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rosrestpy = "^0.1.10"
python-telegram-bot = "^13.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.982"
black = "^22.8.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
